# rassilochka

./: CMakeLists.txt  README.md
РАССЫЛОЧЬКА/: CMakeLists.txt  config.hpp  main.cpp
РАССЫЛОЧЬКА.xcodeproj/: project.pbxproj
РАССЫЛОЧЬКА.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
РАССЫЛОЧЬКА.xcodeproj/xcuserdata/mikchan.xcuserdatad/xcschemes/: xcschememanagement.plist
